# ToyLArTPC

./: CMakeLists.txt  README.md  generate_images.cc  generate_marley_events.cc  main.cc  marley_config.js
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhotonHit.hh  PhotonSD.hh  PrimaryGeneratorAction.hh  RunAction.hh
macros/: run.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhotonHit.cc  PhotonSD.cc  PrimaryGeneratorAction.cc  RunAction.cc
